Also resolve runtime dependencies now that the injected client is a runtime dependency on runelite-client